stages/stage2/k8s/apps/booking/booking-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking
  namespace: apollo-airlines-apps
spec:
  selector:
    app: booking
  ports:
    - port: 8082
      targetPort: 8082
