stages/stage2/k8s/apps/booking/booking-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: booking-allow-specific
  namespace: apollo-airlines-apps
spec:
  podSelector:
    matchLabels:
      app: booking
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8082
  policyTypes:
    - Ingress
